--- a/project.json
+++ b/project.json
@@ -3,7 +3,11 @@
   "description": "Robotic Enterprise Framework",
   "main": "Main.xaml",
   "dependencies": {
+    "DotNetSeleniumExtras.WaitHelpers": "[3.11.0]",
     "RestSharp": "[106.15.0]",
+    "Selenium.Support": "[4.18.1]",
+    "Selenium.WebDriver": "[4.18.1]",
+    "SeleniumExtras.WaitHelpers": "[1.0.2]",
     "UiPath.Database.Activities": "[1.7.1]",
     "UiPath.Excel.Activities": "[2.20.2]",
     "UiPath.MicrosoftOffice365.Activities": "[2.4.3]",
